fix scrollbar

--- a/mysite/static/styles/main.css
+++ b/mysite/static/styles/main.css
@@ -27,6 +27,23 @@
 
 }
 
+::-webkit-scrollbar {
+    height: 12px;
+    width: 12px;
+    background:rgba(255, 255, 255, 0.25);
+    -webkit-border-radius: 1ex;
+}
+
+::-webkit-scrollbar-thumb {
+    background: rgb(25,41,51);
+    -webkit-border-radius: 1ex;
+    -webkit-box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.75);
+}
+
+::-webkit-scrollbar-corner {
+    background: #000;
+}
+
 
 body {
     font-family: Agrandir;
